# ocamlot

./: .gitignore  .overmind.env  Dockerfile.base  Dockerfile.market-publisher  Dockerfile.web-server  Makefile  Procfile  README.md  claude.md  docker-compose.yml  dune-project  ocamlot.opam  sample-config.json
.devcontainer/: README.md  devcontainer.json
common/lib/: dune  types.ml
common/test/: dune  test_common.ml
config/: nats.conf  prometheus.yml
core/lib/: dune  events.ml  order.ml
core/test/: dune  test_core.ml
fix/lib/: dune  protocol.ml
fix/test/: dune  test_fix.ml
lib/market_data_core/: aggregation.ml  analytics.ml  conflation.ml  dune  feed.ml  ocamlot_market_data_core.ml
lib/oms_core/: dune  transitions.ml  validation.ml
lib/risk_core/: calculations.ml  checks.ml  dune
market_data/lib/: analytics.ml  browser_feed.ml  conflation.ml  dune  dune_browser  feed.ml  generator.ml  market_data_system.ml  publisher.ml
market_data/test/: dune  test_market_data.ml
messaging/lib/: dune  event_stream.ml  event_types.ml
messaging/test/: dune  test_messaging.ml
nats/lib/: dune  nats.ml  nats_client.ml  nats_connection.ml  nats_protocol.ml
nats/test/: README.md  dune  test_nats.ml
nats/test/advanced/: dune  test_connection_advanced.ml  test_subscription_advanced.ml
notes/: caching_strategy.md
oms/lib/: dune  order_manager.ml
oms/test/: dune  test_oms.ml
risk/lib/: checks.ml  dune
risk/test/: dune  test_risk.ml
scripts/: docker-test.sh  test-with-stats.sh
sim/lib/: dune  simulator.ml
test/: dune  test_integration.ml
(+68 files in other folders)
