(executable
 (public_name test_connection_advanced)
 (name test_connection_advanced)
 (libraries base lwt alcotest alcotest-lwt ocamlot_nats)
 (preprocess
  (pps lwt_ppx)))

(executable
 (public_name test_subscription_advanced_exe)
 (name test_subscription_advanced)
 (libraries base lwt alcotest alcotest-lwt ocamlot_nats)
 (preprocess
  (pps lwt_ppx)))